--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,11 @@
 "require": {
-	"ext-gd": "*" 
+    "php": ">=5.6.4",
+    "laravel/framework": "5.3.*",
+    "mews/purifier": "~2.0",
+    "vinkla/hashids": "^2.4",
+    "barryvdh/laravel-debugbar": "^2.2",
+    "fzaninotto/faker": "~1.4",
+    "intervention/image": "^2.3",
+    "gd": "*",
+    "ext-gd": "*"
 },
